unpackaged/main/default/objects/Account/fields/EBH_BOBCNTRY__c.field-meta.xml
<CustomField>
    <fullName>EBH_BOBCNTRY__c</fullName>
    <description>[EBH] (EPH-2539) -  BOB COUNTRY</description>
    <inlineHelpText>Country where seller is managed.</inlineHelpText>
    <label>Managed Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Russia</fullName>
            </value>
            <value>
                <fullName>193</fullName>
                <label>CH</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>UK</label>
            </value>
            <value>
                <fullName>101</fullName>
                <label>IT</label>
            </value>
            <value>
                <fullName>186</fullName>
                <label>ES</label>
            </value>
            <value>
                <fullName>163</fullName>
                <label>PL</label>
            </value>
            <value>
                <fullName>99</fullName>
                <label>IE</label>
            </value>
            <value>
                <fullName>146</fullName>
                <label>NL</label>
            </value>
            <value>
                <fullName>23</fullName>
                <label>Small Site</label>
            </value>
            <value>
                <fullName>168</fullName>
                <label>EEC-Unsited</label>
            </value>
            <value>
                <fullName>77</fullName>
                <label>DE</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>AU</label>
            </value>
            <value>
                <fullName>FR</fullName>
            </value>
            <value>
                <fullName>0</fullName>
                <label>US</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>CA</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>AT</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>