unpackaged/main/default/objects/Account/fields/EBH_BOBCNTRYId__c.field-meta.xml
<CustomField>
    <fullName>EBH_BOBCNTRYId__c</fullName>
    <description>[EBH] (EPH-1901) - BOB CNTRY Id</description>
    <inlineHelpText>BOB CNTRY Id</inlineHelpText>
    <label>Managed Country ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>