unpackaged/main/default/objects/Account/fields/EBH_BOBManaged__c.field-meta.xml
<CustomField>
    <fullName>EBH_BOBManaged__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[EBH] (EPH-1901) - BOB Managed</description>
    <inlineHelpText>Sellers who are managed by Seller Growth Verticals or GCX (MSO).</inlineHelpText>
    <label>Managed</label>
    <type>Checkbox</type>
</CustomField>