unpackaged/main/default/objects/Account/fields/EBH_BOBSegment__c.field-meta.xml
<CustomField>
    <fullName>EBH_BOBSegment__c</fullName>
    <description>[EBH] (EPH-1901) - BOB Seller Segment</description>
    <inlineHelpText>A seller can be managed by Seller Growth Verticals (MANAGED) or GCX (MSO). If a seller is not part of the BOB this value will appear blank.</inlineHelpText>
    <label>Managed Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MSO</fullName>
            </value>
            <value>
                <fullName>Managed</fullName>
            </value>
            <value>
                <fullName>Strategic</fullName>
            </value>
            <value>
                <fullName>Key</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Concierge</fullName>
            </value>
            <value>
                <fullName>Platin</fullName>
            </value>
            <value>
                <fullName>AM Bolt-On</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Pro-Trader Cat</fullName>
            </value>
            <value>
                <fullName>PT LTAM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>