unpackaged/main/default/objects/Account/fields/EBH_BOBVertical__c.field-meta.xml
<CustomField>
    <fullName>EBH_BOBVertical__c</fullName>
    <description>[EBH] (EPH-1901) -  BOB Vertical</description>
    <inlineHelpText>Vertical where seller is managed.</inlineHelpText>
    <label>Managed Vertical</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Business &amp; Industrial</fullName>
            </value>
            <value>
                <fullName>Collectibles</fullName>
            </value>
            <value>
                <fullName>Electronics</fullName>
            </value>
            <value>
                <fullName>Fashion</fullName>
            </value>
            <value>
                <fullName>FMCG</fullName>
            </value>
            <value>
                <fullName>Home &amp; Garden</fullName>
            </value>
            <value>
                <fullName>Lifestyle</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Parts &amp; Accessories</fullName>
            </value>
            <value>
                <fullName>Soft Home</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>