unpackaged/main/default/objects/Account/fields/EBH_BrandedShowroomURL__c.field-meta.xml
<CustomField>
    <fullName>EBH_BrandedShowroomURL__c</fullName>
    <description>[EBH] (US-0047) : To capture branded showroom information on a Brand record</description>
    <label>Branded Showroom URL</label>
    <type>Url</type>
</CustomField>