unpackaged/main/default/objects/Account/fields/EBH_BusinessNameExternalID__c.field-meta.xml
<CustomField>
    <fullName>EBH_BusinessNameExternalID__c</fullName>
    <description>[EBH] (EPH-4743) - To upsert the deals records using the business name as text external ID</description>
    <externalId>true</externalId>
    <label>Business Name External ID</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>