unpackaged/main/default/objects/Account/fields/EBH_CompanyName__c.field-meta.xml
<CustomField>
    <fullName>EBH_CompanyName__c</fullName>
    <description>[EBH] (EPH-2201) - Company Name</description>
    <label>Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>