unpackaged/main/default/objects/Account/fields/EBH_DealProgramVetted__c.field-meta.xml
<CustomField>
    <fullName>EBH_DealProgramVetted__c</fullName>
    <formula>AND(EBH_FeedbackScore__c &gt;= 1000, EBH_PositiveFeedback__c &gt;= 0.98, !EBH_VeROViolation__c, (ISPICKVAL(EBH_ActualStandard__c, &quot;ETRS&quot;) || ISPICKVAL(EBH_ActualStandard__c, &quot;Above Standard&quot;)), !CONTAINS(&quot;*uk *de *fr *es *it _uk _de _fr _es _it -uk -de -fr -es -it&quot;, RIGHT(Name,3)),!CONTAINS(&quot;www_ www- www. &quot;, LEFT(Name,4)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Please review the Standards section for details. Required:
- Actual Standard = &quot;ETRS&quot; or &quot;Above Standard&quot;
- Feedback Score &gt;= 1000
- Positive Feedback &gt;= 98%
- VeRo Violation = FALSE</inlineHelpText>
    <label>Deal Program Vetted</label>
    <type>Checkbox</type>
</CustomField>