unpackaged/main/default/objects/Account/fields/EBH_DealsProgram__c.field-meta.xml
<CustomField>
    <fullName>EBH_DealsProgram__c</fullName>
    <description>[EBH] (EPH-4527) - Deals Program</description>
    <inlineHelpText>Is the seller eligible for the Deals Program?</inlineHelpText>
    <label>Deals Program</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Allow</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>