unpackaged/main/default/objects/Account/fields/EBH_DealsProgramChange__c.field-meta.xml
<CustomField>
    <fullName>EBH_DealsProgramChange__c</fullName>
    <description>[EBH] (EPH-4527) - Deals Program Change</description>
    <label>Deals Program Change</label>
    <type>DateTime</type>
</CustomField>