unpackaged/main/default/objects/Account/fields/EBH_DefectRate__c.field-meta.xml
<CustomField>
    <fullName>EBH_DefectRate__c</fullName>
    <description>[EBH] (US-0032) : Defect Rate</description>
    <label>Defect Rate (%)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>