unpackaged/main/default/objects/Account/fields/EBH_DefectReason__c.field-meta.xml
<CustomField>
    <fullName>EBH_DefectReason__c</fullName>
    <description>[EBH] (EPH-2969) : Sprint 5: Seller behavior that caused the recent drop in GMV.</description>
    <inlineHelpText>Seller behavior that caused the drop in GMV and/or predicted drop in seller standard.</inlineHelpText>
    <label>Urgency Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Increase live listings</fullName>
            </value>
            <value>
                <fullName>Improve conversion rate</fullName>
            </value>
            <value>
                <fullName>Review average selling price</fullName>
            </value>
            <value>
                <fullName>Refer driver tree for insights</fullName>
            </value>
            <value>
                <fullName>Order Defects Due to INR/SNAD/Stockout</fullName>
            </value>
            <value>
                <fullName>Seller at Fault due to INR/SNAD</fullName>
            </value>
            <value>
                <fullName>Late Shipment</fullName>
            </value>
            <value>
                <fullName>Multiple</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>GMV or transaction threshold</fullName>
            </value>
            <value>
                <fullName>Multiple Diagnostic Issues</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>