unpackaged/main/default/objects/Account/fields/EBH_DifferenceGMVPerc__c.field-meta.xml
<CustomField>
    <fullName>EBH_DifferenceGMVPerc__c</fullName>
    <description>[EBH] (EPH-4125) - Difference (%)</description>
    <inlineHelpText>Latest week difference between seller actual GMV and their GMV forecast (%)</inlineHelpText>
    <label>% Difference (GMV vs Forecast)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>