unpackaged/main/default/objects/Account/fields/EBH_DifferenceGMVTarget__c.field-meta.xml
<CustomField>
    <fullName>EBH_DifferenceGMVTarget__c</fullName>
    <description>[EBH] (EPH-4125) - Difference (GMV vs Forecast)</description>
    <inlineHelpText>Latest week difference between seller actual GMV and their GMV forecast (USD). Only for Urgent Seller.</inlineHelpText>
    <label>Difference (GMV vs Forecast)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>