unpackaged/main/default/objects/Account/fields/EBH_DriverTree__c.field-meta.xml
<CustomField>
    <fullName>EBH_DriverTree__c</fullName>
    <description>[EBH] (EPH-2240) - Driver tree link with parameter = oracle id</description>
    <formula>HYPERLINK($Setup.EBH_OutboundLink__c.EBH_DriverTreeBaseURL__c &amp; &quot;?seller_id=&quot;&amp; EBH_OracleID__c, &quot;Open Driver Tree&quot;)</formula>
    <inlineHelpText>Go to DriverTree for this Seller</inlineHelpText>
    <label>Link to DriverTree</label>
    <type>Text</type>
</CustomField>