unpackaged/main/default/objects/Account/fields/EBH_eBayPlusAdoption__c.field-meta.xml
<CustomField>
    <fullName>EBH_eBayPlusAdoption__c</fullName>
    <description>[EBH] (US-0031) : eBay Plus Adoption</description>
    <inlineHelpText>Percentage of Listings that have adopted eBay Plus (last Retail Week)</inlineHelpText>
    <label>eBay Plus Adoption (%)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>