unpackaged/main/default/objects/Account/fields/EBH_EmailOut__c.field-meta.xml
<CustomField>
    <fullName>EBH_EmailOut__c</fullName>
    <defaultValue>true</defaultValue>
    <description>[EBH] (EPH-2297) - Email Opt Out</description>
    <label>Email Opt Out</label>
    <type>Checkbox</type>
</CustomField>