unpackaged/main/default/objects/Account/fields/EBH_EmailScore__c.field-meta.xml
<CustomField>
    <fullName>EBH_EmailScore__c</fullName>
    <description>[EBH] (EPH-2969) : Sprint 1: Likelihood (between 0 and 1) of the seller opening the email</description>
    <inlineHelpText>Likelihood (0-1) of the seller opening the email. 99 indicates insufficient data for prediction. Blank indicates no data for prediction.</inlineHelpText>
    <label>Email Likelihood Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>