unpackaged/main/default/objects/Account/fields/EBH_FeedbackScore__c.field-meta.xml
<CustomField>
    <fullName>EBH_FeedbackScore__c</fullName>
    <description>[EBH] (US-0032) : Feedback Score</description>
    <inlineHelpText>Seller´s current Feedback Score.</inlineHelpText>
    <label>Feedback Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>