unpackaged/main/default/objects/Account/fields/EBH_FirstListDate__c.field-meta.xml
<CustomField>
    <fullName>EBH_FirstListDate__c</fullName>
    <description>[EBH] (US-0031) : First List Date</description>
    <inlineHelpText>Seller´s first listing date.</inlineHelpText>
    <label>First List Date</label>
    <type>Date</type>
</CustomField>