unpackaged/main/default/objects/Account/fields/EBH_FirstSellDate__c.field-meta.xml
<CustomField>
    <fullName>EBH_FirstSellDate__c</fullName>
    <description>[EBH] (US-0031) : First Sell Date</description>
    <inlineHelpText>Seller´s first selling date.</inlineHelpText>
    <label>First Sell Date</label>
    <type>Date</type>
</CustomField>