unpackaged/main/default/objects/Account/fields/EBH_FitmentAdoptionPer__c.field-meta.xml
<CustomField>
    <fullName>EBH_FitmentAdoptionPer__c</fullName>
    <description>EPH-5355 Fitment (Target Engine &amp; Seller Record) - SF HIVE ETL</description>
    <inlineHelpText>Percentage of Listings that have adopted fitment (last Retail Week)</inlineHelpText>
    <label>Fitment Adoption (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>