unpackaged/main/default/objects/Account/fields/EBH_FixedPrice__c.field-meta.xml
<CustomField>
    <fullName>EBH_FixedPrice__c</fullName>
    <description>[EBH] (US-0032) : % Fixed Price</description>
    <inlineHelpText>Percentage of Seller&#39;s Live Listings in Fixed Price format.</inlineHelpText>
    <label>Fixed Price (%)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>