unpackaged/main/default/objects/Account/fields/EBH_FullBillingAddress__c.field-meta.xml
<CustomField>
    <fullName>EBH_FullBillingAddress__c</fullName>
    <description>[EBH] (EPH-2201) - Billing Address</description>
    <formula>if(LEN(EBH_BillingAddress__c)&gt;0, EBH_BillingAddress__c &amp; &quot; &quot; , &quot;&quot; ) &amp; BR() &amp;
if(LEN(EBH_BillingStreet__c)&gt;0, EBH_BillingStreet__c &amp; &quot; &quot; , &quot;&quot; ) &amp; BR() &amp;
if(LEN(EBH_BillingCity__c)&gt;0, EBH_BillingCity__c&amp; &quot;, &quot; , &quot;&quot; )&amp;
if(LEN(EBH_BillingState__c)&gt;0, EBH_BillingState__c&amp; &quot; &quot; , &quot;&quot; )&amp;
if(LEN(EBH_BillingPostalCode__c)&gt;0, EBH_BillingPostalCode__c,&quot;&quot;) &amp; BR() &amp;
If(LEN(EBH_BillingCountry__c) &gt;0, EBH_BillingCountry__c,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address</label>
    <type>Text</type>
</CustomField>