unpackaged/main/default/objects/Account/fields/EBH_GBCulture__c.field-meta.xml
<CustomField>
    <fullName>EBH_GBCulture__c</fullName>
    <description>US-0006931:[AU] Subscribe AU Sellers for Deals Program</description>
    <label>Growth Portal Culture</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DE</fullName>
            </value>
            <value>
                <fullName>en-GB</fullName>
                <label>UK</label>
            </value>
            <value>
                <fullName>FR</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>ES</fullName>
            </value>
            <value>
                <fullName>en-AU</fullName>
                <label>AU</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>