unpackaged/main/default/objects/Account/fields/EBH_GDPR_Removed__c.field-meta.xml
<CustomField>
    <fullName>EBH_GDPR_Removed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>(EPH-5525) GDPR Removed Flag</description>
    <inlineHelpText>Indicates that a seller&#39;s personal information (e.g. email address) has been anonymised</inlineHelpText>
    <label>GDPR Removed</label>
    <type>Checkbox</type>
</CustomField>