unpackaged/main/default/objects/Account/fields/EBH_GMVActiveCBT__c.field-meta.xml
<CustomField>
    <fullName>EBH_GMVActiveCBT__c</fullName>
    <description>[EBH] (EPH-3173): (EPH-3896) - GMV - Active CBT (%)</description>
    <formula>IF( !ISBLANK(EBH_GMVLast12Months__c), EBH_GMVActiveCBTL12__c / EBH_GMVLast12Months__c, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Percentage of Seller&#39;s GMV that is Active CBT.</inlineHelpText>
    <label>Percentage of Active CBT (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>