unpackaged/main/default/objects/Account/fields/EBH_GMVActiveCBTL12__c.field-meta.xml
<CustomField>
    <fullName>EBH_GMVActiveCBTL12__c</fullName>
    <description>[EBH] (EPH-3173) - GMVActiveCBTL12</description>
    <inlineHelpText>$ GMV of Active CBT over the last 12 months.</inlineHelpText>
    <label>GMV - Active CBT (Last 12 Months)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>