unpackaged/main/default/objects/Account/fields/EBH_GMVActiveCBTYoY__c.field-meta.xml
<CustomField>
    <fullName>EBH_GMVActiveCBTYoY__c</fullName>
    <description>[EBH] (EPH-3173) - GMV_Active_CBT_YoY</description>
    <inlineHelpText>GMV YoY of Active CBT over the last 12 months.</inlineHelpText>
    <label>GMV - Active CBT YoY (%)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>