unpackaged/main/default/objects/Account/fields/EBH_GMVchangelast4weeks__c.field-meta.xml
<CustomField>
    <fullName>EBH_GMVchangelast4weeks__c</fullName>
    <description>[EBH] (EPH-3313) - To track the GMV change for the last 4 weeks</description>
    <label>GMV % change for the last 4 weeks</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>