unpackaged/main/default/objects/Account/fields/EBH_GMVLast12Months__c.field-meta.xml
<CustomField>
    <fullName>EBH_GMVLast12Months__c</fullName>
    <description>[EBH] US-0032: to store GMV information of last 12 months</description>
    <inlineHelpText>$ GMV in Plan Currency over the last 12 months.</inlineHelpText>
    <label>GMV (Last 12 Months)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>