unpackaged/main/default/objects/Account/fields/EBH_GMVLastWeek1__c.field-meta.xml
<CustomField>
    <fullName>EBH_GMVLastWeek1__c</fullName>
    <formula>EBH_GMVLastWeek__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>An urgent seller&#39;s GMV for last week</inlineHelpText>
    <label>GMV (Last Week)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>