unpackaged/main/default/objects/Account/fields/EBH_GMVLastWeek__c.field-meta.xml
<CustomField>
    <fullName>EBH_GMVLastWeek__c</fullName>
    <description>[EBH] (EPH-4125) - GMV (Last Week)</description>
    <inlineHelpText>An urgent seller&#39;s GMV for last week</inlineHelpText>
    <label>GMV (Last Week)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>