unpackaged/main/default/objects/Account/fields/EBH_GMVPassiveCBT__c.field-meta.xml
<CustomField>
    <fullName>EBH_GMVPassiveCBT__c</fullName>
    <description>[EBH] (EPH-3173)</description>
    <formula>IF( !ISBLANK(EBH_GMVLast12Months__c), EBH_GMVPassiveCBTL12__c / EBH_GMVLast12Months__c, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Percentage of Seller&#39;s GMV that is Passive CBT.</inlineHelpText>
    <label>Percentage of Passive CBT (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>