unpackaged/main/default/objects/Account/fields/EBH_GMVPassiveCBTL12__c.field-meta.xml
<CustomField>
    <fullName>EBH_GMVPassiveCBTL12__c</fullName>
    <description>[EBH] (EPH-3173) - GMV - Passive CBT (Last 12 Months)</description>
    <inlineHelpText>$ GMV of Passive CBT over the last 12 months.</inlineHelpText>
    <label>GMV - Passive CBT (Last 12 Months)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>