unpackaged/main/default/objects/Account/fields/EBH_GMVPassiveCBTYoY__c.field-meta.xml
<CustomField>
    <fullName>EBH_GMVPassiveCBTYoY__c</fullName>
    <description>[EBH] (EPH-3173) - GMV_Passive_CBT_YoY</description>
    <inlineHelpText>GMV YoY of Passive CBT over the last 12 months.</inlineHelpText>
    <label>GMV - Passive CBT YoY (%)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>