unpackaged/main/default/objects/Account/fields/EBH_GMVRemaining__c.field-meta.xml
<CustomField>
    <fullName>EBH_GMVRemaining__c</fullName>
    <description>[EBH] (EPH-78) - % of GMV Limit remaining for current month</description>
    <inlineHelpText>% of GMV Limit remaining for current month</inlineHelpText>
    <label>GMV Remaining %</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>