unpackaged/main/default/objects/Account/fields/EBH_GMVRequested__c.field-meta.xml
<CustomField>
    <fullName>EBH_GMVRequested__c</fullName>
    <description>[EBH] (EPH-78) - GMV limit change requested during new listing or revision</description>
    <inlineHelpText>GMV limit change requested during new listing or revision</inlineHelpText>
    <label>GMV Requested</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>