unpackaged/main/default/objects/Account/fields/EBH_GMVTarget__c.field-meta.xml
<CustomField>
    <fullName>EBH_GMVTarget__c</fullName>
    <description>[EBH] (EPH-4125) - Target</description>
    <inlineHelpText>Last week&#39;s GMV forecast based on seller&#39;s performance in the last 4 weeks and the growth of all the categories that they sell in</inlineHelpText>
    <label>GMV Forecast (Last week)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>