unpackaged/main/default/objects/Account/fields/EBH_GMVYoY__c.field-meta.xml
<CustomField>
    <fullName>EBH_GMVYoY__c</fullName>
    <description>[EBH] (US-0032) : to store GMV YoY information</description>
    <inlineHelpText>$ GMV YoY%  in the last 12 months.</inlineHelpText>
    <label>GMV YoY (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>