unpackaged/main/default/objects/Account/fields/EBH_GMVYoYLastWeek__c.field-meta.xml
<CustomField>
    <fullName>EBH_GMVYoYLastWeek__c</fullName>
    <description>[EBH] (EPH-1901) - (Wave dataset field for targeting Cockpit) GMV YoY last week</description>
    <inlineHelpText>GMV YoY last week</inlineHelpText>
    <label>GMV YoY (Last Week)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>