unpackaged/main/default/objects/Account/fields/EBH_InvitedtoDealProgram__c.field-meta.xml
<CustomField>
    <fullName>EBH_InvitedtoDealProgram__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[EBH] (EPH-) - Invited to Deal Program</description>
    <label>Invited to Deal Program</label>
    <type>Checkbox</type>
</CustomField>