unpackaged/main/default/objects/Account/fields/EBH_LastRefreshDate__c.field-meta.xml
<CustomField>
    <fullName>EBH_LastRefreshDate__c</fullName>
    <description>[EBH] (EPH-2835) - Last Refresh Date</description>
    <label>Last Refresh Date</label>
    <type>Date</type>
</CustomField>