unpackaged/main/default/objects/Account/fields/EBH_LastSellDate__c.field-meta.xml
<CustomField>
    <fullName>EBH_LastSellDate__c</fullName>
    <description>[EBH] (US-0031) : Last Sell Date</description>
    <inlineHelpText>Seller´s last selling date.</inlineHelpText>
    <label>Last Sell Date</label>
    <type>Date</type>
</CustomField>