unpackaged/main/default/objects/Account/fields/EBH_LateRate__c.field-meta.xml
<CustomField>
    <fullName>EBH_LateRate__c</fullName>
    <description>[EBH] (US-0032): Late Delivery Rate</description>
    <label>Late Delivery Rate (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>