unpackaged/main/default/objects/Account/fields/EBH_LegacyID__c.field-meta.xml
<CustomField>
    <fullName>EBH_LegacyID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>[EBH] (EPH-1982) - Legacy Id</description>
    <externalId>true</externalId>
    <label>Legacy ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>