unpackaged/main/default/objects/Account/fields/EBH_LegalEntity__c.field-meta.xml
<CustomField>
    <fullName>EBH_LegalEntity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>[EBH] (US-0030) : to capture the Legal Entity on the Seller record</description>
    <label>Legal Entity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Legal Entity</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Seller</relationshipLabel>
    <relationshipName>EBH_LegalEntities</relationshipName>
    <type>Lookup</type>
</CustomField>