unpackaged/main/default/objects/Account/fields/EBH_LegalEntityName__c.field-meta.xml
<CustomField>
    <fullName>EBH_LegalEntityName__c</fullName>
    <description>[EBH] (EPH-81) - to filter sellers with the help of a legal entity</description>
    <label>Legal Entity Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>