unpackaged/main/default/objects/Account/fields/EBH_LifecycleStage__c.field-meta.xml
<CustomField>
    <fullName>EBH_LifecycleStage__c</fullName>
    <description>[EBH] (US-0031) : Lifecycle Stage</description>
    <inlineHelpText>Based on last 12 month GMV YoY%. &quot;Accelerating&quot; (&gt;10%), &quot;Declining&quot; (&lt;0%), &quot;Maturing&quot; (0-10%), &quot;New&quot; refer to those sellers who doesn&#39;t have GMV in the last year (i.e. denominator is 0).</inlineHelpText>
    <label>Lifecycle Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Accelerating</fullName>
            </value>
            <value>
                <fullName>Maturing</fullName>
            </value>
            <value>
                <fullName>Declining</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>