unpackaged/main/default/objects/Account/fields/EBH_LimitCurrency__c.field-meta.xml
<CustomField>
    <fullName>EBH_LimitCurrency__c</fullName>
    <description>[EBH] (EPH-2201) - Limit Currency</description>
    <label>Limit Currency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>