unpackaged/main/default/objects/Account/fields/EBH_LimitHitCurrentMonth__c.field-meta.xml
<CustomField>
    <fullName>EBH_LimitHitCurrentMonth__c</fullName>
    <description>[EBH] (EPH-78) - Number of times limit was hit within the current month</description>
    <inlineHelpText>Number of times limit was hit within the current month</inlineHelpText>
    <label># Limit Hit (Current Month)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>