unpackaged/main/default/objects/Account/fields/EBH_LimitHitLast7Days__c.field-meta.xml
<CustomField>
    <fullName>EBH_LimitHitLast7Days__c</fullName>
    <description>[EBH] (EPH-78) - Number of times limit was hit within the last 7 days</description>
    <inlineHelpText>Number of times limit was hit within the last 7 days</inlineHelpText>
    <label># Limit Hit (Last 7 Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>