unpackaged/main/default/objects/Account/fields/EBH_LimitReasonDescription__c.field-meta.xml
<CustomField>
    <fullName>EBH_LimitReasonDescription__c</fullName>
    <description>[EBH] (EPH-2201) - Limit Reason Description</description>
    <label>Limit Reason Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>